docs only shows token when user posts session
